màj swagger + ajout route addBadgetoFridge et addNationalitytoFridge
